[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/NpcList/NPCListButton.tres" type="Theme" id=1]
[ext_resource path="res://UI/NpcList/PanelStyle.tres" type="StyleBox" id=2]
[ext_resource path="res://UI/NpcList/NPCRow.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 6.0
draw_center = false

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.784314, 0.784314, 0.784314, 0.784314 )
border_width_right = 1
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.360288, 0.357468, 0.535156, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.247059, 0.243137, 0.490196, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 2

[node name="NPCRow" type="PanelContainer"]
margin_right = 1280.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 1
size_flags_horizontal = 11
size_flags_vertical = 0
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 3 )

[node name="ShowNPC" type="Button" parent="."]
margin_right = 1280.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 11
theme = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/separation = 0

[node name="Name" type="Label" parent="HBoxContainer"]
margin_right = 248.0
margin_bottom = 50.0
rect_min_size = Vector2( 110, 50 )
size_flags_horizontal = 11
size_flags_vertical = 0
custom_styles/normal = SubResource( 1 )
text = "Name:"
valign = 1
autowrap = true

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 248.0
margin_right = 256.0
margin_bottom = 50.0
rect_min_size = Vector2( 2, 0 )
mouse_filter = 2
custom_constants/separation = 8
custom_styles/separator = SubResource( 8 )

[node name="Gender" type="Label" parent="HBoxContainer"]
margin_left = 256.0
margin_right = 504.0
margin_bottom = 50.0
rect_min_size = Vector2( 75, 50 )
size_flags_horizontal = 11
size_flags_vertical = 0
text = "Peachboy:"
valign = 1
clip_text = true

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
margin_left = 504.0
margin_right = 512.0
margin_bottom = 50.0
rect_min_size = Vector2( 2, 0 )
mouse_filter = 2
custom_constants/separation = 8
custom_styles/separator = SubResource( 8 )

[node name="Personality" type="Label" parent="HBoxContainer"]
margin_left = 512.0
margin_right = 761.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 11
size_flags_vertical = 0
text = "Somewhat dominant:"
valign = 1
autowrap = true

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer"]
margin_left = 761.0
margin_right = 769.0
margin_bottom = 50.0
rect_min_size = Vector2( 2, 0 )
mouse_filter = 2
custom_constants/separation = 8
custom_styles/separator = SubResource( 8 )

[node name="Children" type="Label" parent="HBoxContainer"]
margin_left = 769.0
margin_right = 893.0
margin_bottom = 50.0
rect_min_size = Vector2( 30, 50 )
size_flags_horizontal = 11
size_flags_vertical = 0
size_flags_stretch_ratio = 0.5
text = "Children with you:"
align = 1
valign = 1

[node name="VSeparator4" type="VSeparator" parent="HBoxContainer"]
margin_left = 893.0
margin_right = 901.0
margin_bottom = 50.0
rect_min_size = Vector2( 2, 0 )
mouse_filter = 2
custom_constants/separation = 8
custom_styles/separator = SubResource( 8 )

[node name="Relationship" type="Label" parent="HBoxContainer"]
margin_left = 901.0
margin_right = 1149.0
margin_bottom = 50.0
rect_min_size = Vector2( 140, 50 )
size_flags_horizontal = 11
size_flags_vertical = 0
text = "Affection: 100%
Lust: 0%"
valign = 1
clip_text = true

[node name="CenterContainer2" type="CenterContainer" parent="HBoxContainer"]
margin_left = 1149.0
margin_right = 1214.0
margin_bottom = 50.0
rect_min_size = Vector2( 65, 50 )

[node name="Meet" type="Button" parent="HBoxContainer/CenterContainer2"]
margin_top = 5.0
margin_right = 65.0
margin_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 65, 40 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = SubResource( 13 )
text = "Meet"

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 1214.0
margin_right = 1279.0
margin_bottom = 50.0
rect_min_size = Vector2( 65, 50 )

[node name="Forget" type="Button" parent="HBoxContainer/CenterContainer"]
margin_top = 5.0
margin_right = 65.0
margin_bottom = 45.0
rect_min_size = Vector2( 65, 40 )
size_flags_horizontal = 7
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = SubResource( 13 )
text = "Forget"

[connection signal="pressed" from="ShowNPC" to="." method="_on_ShowNPC_pressed"]
[connection signal="pressed" from="HBoxContainer/CenterContainer2/Meet" to="." method="_on_Meet_pressed"]
[connection signal="pressed" from="HBoxContainer/CenterContainer/Forget" to="." method="_on_Forget_pressed"]
